tests/fixtures/valid/ngl003_valid.py
from nicegui import ui

ui.button('Save').props('outlined').style('width: 50%')
