tests/fixtures/invalid/ngl003_invalid.py
from nicegui import ui

ui.button('Save').props('width=50% outlined').classes('w-50')
